--- a/aboutus.css
+++ b/aboutus.css
@@ -8,6 +8,8 @@
   src: url('fonts/AvenirNextArabic.woff2') format('woff2');
 }
 
+
+/* Creates 2 new fonts */
 /* Base styles */
 body {
   margin: 0;
@@ -16,6 +18,7 @@ body {
   color: #333;
   line-height: 1.6;
 }
+
 
 /* Fixed top-right button */
 /* Fixed top-right button */
